tests/baselines/reference/typeNamedUndefined1.errors.txt
typeNamedUndefined1.ts(3,17): error TS2457: Type alias name cannot be 'undefined'.
typeNamedUndefined1.ts(13,13): error TS2457: Type alias name cannot be 'undefined'.


==== typeNamedUndefined1.ts (2 errors) ====
    export namespace ns {
        const s = Symbol();
        export type undefined = typeof s;
                    ~~~~~~~~~
!!! error TS2457: Type alias name cannot be 'undefined'.
        export function x(p: undefined): undefined { // global undefined
            return p;
        }
    }
    
    export function x(p: ns.undefined) { // undefined from the namespace
        return p;
    }
    
    export type undefined = "";
                ~~~~~~~~~
!!! error TS2457: Type alias name cannot be 'undefined'.
    